--- a/src/my_simulator/CMakeLists.txt
+++ b/src/my_simulator/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(my_simulator)
 
+set(CMAKE_BUILD_TYPE "Release")
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
 
@@ -18,11 +19,9 @@ set(CMAKE_MODULE_PATH
 # message(${CMAKE_MODULE_PATH})
 find_package(Eigen3)
 find_package(DART 6.9 REQUIRED COMPONENTS utils-urdf gui-osg CONFIG)
-message("#################################################")
-message(${DART_INCLUDE_DIRS})
-message("#################################################")
+
 catkin_package(
-  LIBRARIES run_magneto
+  LIBRARIES run_magneto magneto_ros
   CATKIN_DEPENDS my_utils my_pnc
 )
 
@@ -39,9 +38,13 @@ include_directories(
 
 
 file(GLOB_RECURSE dart_magneto_sources "src/Dart/Magneto/*.cpp")
-file(GLOB_RECURSE bullet_sources "src/Bullet/*.cpp")
 file(GLOB_RECURSE dart_magneto_headers "src/Dart/Magneto/*.hpp")
+file(GLOB_RECURSE bullet_sources "src/Bullet/*.cpp")
 file(GLOB_RECURSE bullet_headers "src/Bullet/*.hpp")
+file(GLOB_RECURSE ros_dart_sources "src/RosSim/*.cpp")
+file(GLOB_RECURSE ros_dart_headers "src/RosSim/*.hpp")
+
+
 
 add_executable(run_magneto ${dart_magneto_sources}
                           ${dart_magneto_headers})
@@ -49,6 +52,12 @@ target_link_libraries(run_magneto ${DART_LIBRARIES}
                                   my_pnc
                                   my_utils)
 
+add_executable(magneto_ros ${ros_dart_sources}
+                        ${ros_dart_headers})
+target_link_libraries(magneto_ros ${DART_LIBRARIES}
+                              ${catkin_LIBRARIES}
+                              my_pnc
+                              my_utils)
 
 # add_executable(run_test ${bullet_sources}
 #                         ${bullet_headers})
