--- a/src/my_wbc/CMakeLists.txt
+++ b/src/my_wbc/CMakeLists.txt
@@ -7,6 +7,8 @@ project(my_wbc)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
+set(CMAKE_BUILD_TYPE "Release")
+
 set(CMAKE_MODULE_PATH 
   ${CMAKE_MODULE_PATH} 
   ${PROJECT_SOURCE_DIR}/cmake)
