--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -1,3 +1,4 @@
+# --simulator settings
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 is_record: false
 show_joint_frame: false #false
@@ -5,24 +6,22 @@ show_link_frame: true #false
 plot_mpc_result: false # true
 plot_result: true # true
 
-#ground: robot_description/Ground/ground_terrain.urdf
-#ground: robot_description/Ground/magneto/ground_climbing.urdf
-#ground: robot_description/Ground/magneto/ground_inclined.urdf
-#ground: robot_description/Ground/magneto/ground_inclined02.urdf
+# --configuration settings
+robot: robot_description/Robot/Magneto/MagnetoSim_Dart.urdf
 ground: robot_description/Ground/magneto/ground_inclined03.urdf
-#ground: robot_description/Ground/magneto/ground_3d.urdf
+initial_pose: [ 0.0, 0.0, 0.135, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
 
-initial_pose: [ 0.0, 0.0, 0.15, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
+# --motion script settings
+#motion_script: Config/CSIRO/MOTIONS/balanceset.yaml
+motion_script: config/Magneto/MOTIONS/walkset.yaml
 
-#motion_script: Config/CSIRO/MOTIONS/balanceset0.yaml
-#motion_script: Config/CSIRO/MOTIONS/balanceset1.yaml
-#motion_script: Config/CSIRO/MOTIONS/balanceset2.yaml
-#motion_script: Config/CSIRO/MOTIONS/balanceset3.yaml
-motion_script: Config/CSIRO/MOTIONS/balance.yaml
-
+# --controller settings
 control_configuration:
-  kp: 35 #300
-  kd: 3 #15
+  kp: 20 #35 #20 #300
+  kd: 3 #3 #3 #15
+  torque_limit: 5 #4.5
 
-magnetic_force: 100. #[N] 
-residual_magnetism: 3.0 #[%]
+# -- initial physics settings
+magnetic_force: 147. #[N] 
+residual_magnetism: 0.0 #5.0 # 3.0 #[%]
+friction: 0.7
