--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -22,6 +22,11 @@ control_configuration:
   torque_limit: 5 #4.5
 
 # -- initial physics settings
-magnetic_force: 147. #[N] 
-residual_magnetism: 0.0 #5.0 # 3.0 #[%]
-friction: 0.7
+contact_params:
+  # [AL, AR, BL, BR] >> MagnetoFoot @ MagnetoDefinition.hpp
+  friction: [0.7, 0.7, 0.7, 0.7] 
+  
+magnetism_params:
+  # [AL, AR, BL, BR] >> MagnetoFoot @ MagnetoDefinition.hpp
+  magnetic_force: [147., 147., 147., 147.] #[N] 
+  residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
