--- a/config/Magneto/INTERFACE.yaml
+++ b/config/Magneto/INTERFACE.yaml
@@ -1,3 +1,3 @@
 #test_name: balance_test
-test_name: static_walking_test
-#test_name: three_foot_balance_test
+# test_name: static_walking_test
+test_name: mpc_climbing_test
