--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -13,7 +13,8 @@ initial_pose: [ 0.0, 0.0, 0.135, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
 
 # --motion script settings
 #motion_script: Config/CSIRO/MOTIONS/balanceset.yaml
-motion_script: config/Magneto/MOTIONS/walkset.yaml
+# motion_script: config/Magneto/MOTIONS/walkset.yaml
+motion_script: config/Magneto/MOTIONS/climbset.yaml
 
 # --controller settings
 control_configuration:
