--- a/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
+++ b/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
@@ -1,9 +1,13 @@
 contact_params:
-    friction: 0.7
+    # AL,AR,BL,BR
+    friction: [0.5, 0.5, 0.5, 0.5]
+    # friction: [0.5, 0.5, 0.3, 0.5] 
 
 magnetism_params:
-    magnetic_force: 100 #[N]
-    residual_ratio: 5 #5 #[%]
+    # AL,AR,BL,BR
+    magnetic_force: [70., 70., 70., 70.] #[N]
+    # magnetic_force: [70., 70., 30., 70.] #[N]
+    residual_ratio: [5., 5., 5., 5.] #5 #[%]
 
 state_swing_params:
     swing_time_percent_early_contact_check: 0.5 # Percent of end_time to check if there are early contacts 
@@ -33,8 +37,6 @@ controller_params:
     position_freq_cutoff: 1.0 #Hz
     max_position_error: 0.2 # radians
     kp: [ 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20]
-    #kp: [ 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10]
     kd: [ 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3 ]
-    #kp: [ 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0. ]
-    #kd: [ 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0. ]
+
 
