--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -25,9 +25,9 @@ control_configuration:
 # -- initial physics settings
 contact_params:
   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  friction: 0.7 #[0.7, 0.7, 0.7, 0.7] 
+  friction: [0.5, 0.5, 0.5, 0.5] 
   
 magnetism_params:
   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  magnetic_force: 147 #[147., 147., 147., 147.] #[N] 
-  residual_magnetism: 0.0 #[0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
+  magnetic_force: [70., 70., 70., 70.] #[N] 
+  residual_magnetism: [5.0, 5.0, 5.0, 5.0] #[0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
