--- a/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
+++ b/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
@@ -24,8 +24,8 @@ qp_weights_params:
     w_xddot_z_nocontact: 0.001
     # w_xddot_nocontact: 0.001
     w_rf: 1.0
-    w_rf_z_contact: 0.01    
-    w_rf_z_nocontact: 0.5
+    w_rf_z_contact: 0.001 #0.01    
+    w_rf_z_nocontact: 0.05 #0.5
     # w_rf_z: 0.01
     max_rf_z: 250
     max_rf_z_nocontact: 1
