--- a/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
+++ b/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
@@ -1,3 +1,22 @@
+controller_params:
+    #0:MRWBCC, #1:MFWBCC
+    wbc_type: 0
+    # Enable torque limits
+    enable_torque_limits: true
+    torque_limit: 5 #4.5
+    # WBC pd gain
+    kp: [ 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20]
+    kd: [ 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3 ]
+    # Integration_parameters
+    velocity_freq_cutoff: 2.0 #Hz
+    position_freq_cutoff: 1.0 #Hz
+    max_position_error: 0.2 # radians
+
+slip_observer_params:
+    weight_shaping: 0 # onoff
+    slip_velocity_threshold: 0.01
+    lpf_vel_cutoff: 30 #hz
+
 contact_params:
     # AL,AR,BL,BR
     friction: [0.5, 0.5, 0.5, 0.5]
@@ -6,12 +25,8 @@ contact_params:
 magnetism_params:
     # AL,AR,BL,BR
     magnetic_force: [70., 70., 70., 70.] #[N]
-    #magnetic_force: [70., 30., 70., 70.] #[N]
+    #magnetic_force: [70., 40., 70., 70.] #[N]
     residual_ratio: [5., 5., 5., 5.] #5 #[%]
-
-state_swing_params:
-    swing_time_percent_early_contact_check: 0.5 # Percent of end_time to check if there are early contacts 
-    early_contact_force_threshold: 10 # Exit swing when 10 Newtons have been detected on the foot contact sensor
 
 transition_params:
     transition_duration: 0.1
@@ -24,22 +39,12 @@ qp_weights_params:
     w_xddot_z_nocontact: 0.001
     # w_xddot_nocontact: 0.001
     w_rf: 1.0
-    w_rf_z_contact: 0.001 #0.01    
-    w_rf_z_nocontact: 0.05 #0.5
+    w_rf_z_contact: 0.1 #0.01    
+    w_rf_z_nocontact: 0.5 #0.5
     # w_rf_z: 0.01
     max_rf_z: 250
     max_rf_z_nocontact: 1
 
-controller_params:
-    wbc_type: 1 #0:WBMC, #1:WBRMC
-    # Enable torque limits
-    enable_torque_limits: true
-    torque_limit: 5 #4.5
-    # Integration_parameters
-    velocity_freq_cutoff: 2.0 #Hz
-    position_freq_cutoff: 1.0 #Hz
-    max_position_error: 0.2 # radians
-    kp: [ 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20, 20]
-    kd: [ 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3 ]
-
-
+state_swing_params:
+    swing_time_percent_early_contact_check: 0.5 # Percent of end_time to check if there are early contacts 
+    early_contact_force_threshold: 10 # Exit swing when 10 Newtons have been detected on the foot contact sensor
