--- a/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
+++ b/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
@@ -13,23 +13,25 @@ controller_params:
     max_position_error: 0.2 # radians
 
 slip_observer_params:
-    weight_shaping: 1 # onoff
+    weight_shaping: 0 # onoff
     slip_velocity_threshold: 0.005
     lpf_vel_cutoff: 30 #hz
 
 contact_params:
     # AL,AR,BL,BR
-    friction: [0.5, 0.5, 0.5, 0.5]
+    #friction: [0.5, 0.5, 0.5, 0.5]
     #friction: [0.5, 0.3, 0.5, 0.5] 
+    friction: [0.7, 0.7, 0.7, 0.7] 
 
 magnetism_params:
     # AL,AR,BL,BR
-    magnetic_force: [70., 70., 70., 70.] #[N]
+    #magnetic_force: [70., 70., 70., 70.] #[N]
     #magnetic_force: [70., 40., 70., 70.] #[N]
+    magnetic_force: [150., 150., 150., 150.] #[N]
     residual_ratio: [5., 5., 5., 5.] #5 #[%]
 
 transition_params:
-    transition_duration: 0.05
+    transition_duration: 0.25
 
 qp_weights_params:
     # max_rf_z: 150
