--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -8,26 +8,43 @@ plot_result: true # true
 
 # --configuration settings
 robot: robot_description/Robot/Magneto/MagnetoSim_Dart.urdf
-ground: robot_description/Ground/magneto/ground_inclined03.urdf
-initial_pose: [ 0.0, 0.0, 0.135, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
+# ground: robot_description/Ground/magneto/ground_inclined03.urdf
+# magnetic_frame: 0 # 0:foot local frame, 1:surface frame
+# initial_pose: [ 0.0, 0.0, 0.135, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
+# initial_leg_config: [0.0, 0.15707963267, -1.72787595947, 0.0, 0.0, 0.0]
+
+# ground: robot_description/Ground/safe_climbing_test_2022/ground_3d.urdf
+# magnetic_frame: 0 # 0:foot local frame, 1:surface frame
+# initial_pose: [ 0.0, 0.0, 0.0, 0.0, 1.57079632679, 0.0 ] # x,y,z, rx,ry,rz
+# initial_leg_config: [0.0, -0.47123889803, -1.5707963268, 0.0, 0.31415926535, 0.0]
+
+ground: robot_description/Ground/safe_climbing_test_2022/ground_3d_inclined.urdf
+initial_pose: [ 0.0, 0.0, 0.3, 0.0, 0.785398, 0.0 ] # x,y,z, rx,ry,rz
+initial_leg_config: [0.0, -0.5, -1.5707963268, 0.0, 0.5, 0.0]
+magnetic_frame: 1 # 0:foot local frame, 1:initial surface frame, 2:fixed given surface frame
+
 
 # --motion script settings
 #motion_script: Config/CSIRO/MOTIONS/balanceset.yaml
 # motion_script: config/Magneto/MOTIONS/walkset.yaml
-motion_script: config/Magneto/MOTIONS/climbset.yaml
+# motion_script: config/Magneto/MOTIONS/climbset.yaml
+motion_script: config/Magneto/MOTIONS/climbset_normal.yaml
+
 
 # --controller settings
 control_configuration:
-  kp: 20 #35 #20 #300
-  kd: 3 #3 #3 #15
+  kp: 10 #20 #35 #20 #300
+  kd: 3 #3 #3 #3 #15
   torque_limit: 5 #4.5
 
-# -- initial physics settings
+# -- initial physics settings / can be changed based on motion script
 contact_params:
   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  friction: [0.5, 0.5, 0.5, 0.5] 
+  # friction: [0.5, 0.5, 0.5, 0.5] 
+  friction: [0.7, 0.7, 0.7, 0.7] 
   
 magnetism_params:
   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  magnetic_force: [70., 70., 70., 70.] #[N] 
+  # magnetic_force: [70., 70., 70., 70.] #[N]
+  magnetic_force: [150., 150., 150., 150.] #[N]  
   residual_magnetism: [5.0, 5.0, 5.0, 5.0] #[0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
