--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -7,7 +7,10 @@ plot_mpc_result: false # true
 plot_result: true # true
 
 # --configuration settings
-robot: robot_description/Robot/Magneto/MagnetoSim_Dart.urdf
+# robot: robot_description/Robot/Magneto/MagnetoSim_Dart.urdf
+robot: robot_description/Robot/Magneto/MagnetoSim_limitup.urdf
+
+
 # ground: robot_description/Ground/magneto/ground_inclined03.urdf
 # magnetic_frame: 0 # 0:foot local frame, 1:surface frame
 # initial_pose: [ 0.0, 0.0, 0.135, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
@@ -18,15 +21,26 @@ robot: robot_description/Robot/Magneto/MagnetoSim_Dart.urdf
 # initial_pose: [ 0.0, 0.0, 0.0, 0.0, 1.57079632679, 0.0 ] # x,y,z, rx,ry,rz
 # initial_leg_config: [0.0, -0.47123889803, -1.5707963268, 0.0, 0.31415926535, 0.0]
 
-ground: robot_description/Ground/safe_climbing_test_2022/ground_3d_inclined.urdf
-initial_pose: [ 0.0, 0.0, 0.05, 0.0, 0.785398, 0.0 ] # x,y,z, rx,ry,rz
-initial_leg_config: [0.0, -0.785398, -1.5707963268, 0.1, 0.3, 0.0]
+# ground: robot_description/Ground/safe_climbing_test_2022/ground_3d_inclined.urdf
+# initial_pose: [ 0.0, 0.0, 0.05, 0.0, 0.785398, 0.0 ] # x,y,z, rx,ry,rz
+# initial_leg_config: [0.0, -0.785398, -1.5707963268, 0.1, 0.4, 0.0]
+# contact_frame: 2 # 0:foot local frame, 1:initial surface frame, 2:fixed given surface frame
+# contact_surface_noraml: # foot : AL-0, AR-1, BL-2, BR-3
+#   AL: [ 0.5, 0.7071066, 0.500000 ]
+#   AR: [ 0.5, -0.7071066, 0.500000 ]
+#   BL: [ 0.5, 0.7071066, 0.500000 ] 
+#   BR: [ 0.5, -0.7071066, 0.500000 ]
+
+ground: robot_description/Ground/safe_climbing_test_2022/hexa_column.urdf
+initial_pose: [ 0.015, 0.0, 0.5, 0.0, 1.5, 0.0 ] # x,y,z, rx,ry,rz
+initial_leg_config: [0.0, -0.5, -1.5707963268, 0.1, 0.4, 0.0]
 contact_frame: 2 # 0:foot local frame, 1:initial surface frame, 2:fixed given surface frame
 contact_surface_noraml: # foot : AL-0, AR-1, BL-2, BR-3
-  AL: [ 0.5, 0.7071066, 0.500000 ]
-  AR: [ 0.5, -0.7071066, 0.500000 ]
-  BL: [ 0.5, 0.7071066, 0.500000 ] 
-  BR: [ 0.5, -0.7071066, 0.500000 ]
+  AL: [ 0.8660254, 0.5, 0.0 ]
+  AR: [ 0.8660254, -0.5, 0.0 ]
+  BL: [ 0.8660254, 0.5, 0.0 ] 
+  BR: [ 0.8660254, -0.5, 0.0 ] 
+
 
 # --motion script settings
 #motion_script: Config/CSIRO/MOTIONS/balanceset.yaml
@@ -45,10 +59,11 @@ control_configuration:
 contact_params:
   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
   # friction: [0.5, 0.5, 0.5, 0.5] 
-  friction: [0.7, 0.7, 0.7, 0.7] 
+  friction: [0.65, 0.65, 0.65, 0.65] 
   
 magnetism_params:
   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  # magnetic_force: [70., 70., 70., 70.] #[N]
-  magnetic_force: [150., 150., 150., 150.] #[N]  
-  residual_magnetism: [5.0, 5.0, 5.0, 5.0] #[0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
+  magnetic_force: [65., 65., 65., 65.] #[N]
+  # magnetic_force: [150., 150., 150., 150.] #[N]  
+  # residual_magnetism: [5.0, 5.0, 5.0, 5.0] #5.0 # 3.0 #[%]
+  residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
