--- a/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS_flat.yaml
+++ b/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS_flat.yaml
@@ -19,17 +19,19 @@ slip_observer_params:
 
 contact_params:
     # AL,AR,BL,BR
-    friction: [0.5, 0.3, 0.5, 0.5]  
+    friction: [0.5, 0.3, 0.5, 0.5]    
+
     # friction: [0.5, 0.5, 0.5, 0.5]    
     # friction: [0.7, 0.7, 0.7, 0.7]
+    # friction: [0.7, 0.7, 0.7, 0.7]  
 
 magnetism_params:
     # AL,AR,BL,BR
     magnetic_force: [70., 30., 70., 70.] #[N]    
     # magnetic_force: [60., 60., 60., 60.] #[N]    
-    # magnetic_force: [75., 75., 75., 75.] #[N]
-    # magnetic_force: [80., 80., 80., 80.] #[N]    
+    #magnetic_force: [70., 70., 70., 70.] #[N]
     # magnetic_force: [150., 150., 150., 150.] #[N]
+
     residual_ratio: [5., 5., 5., 5.] #5 #[%]
 
 transition_params:
