--- a/config/Magneto/MOTIONS/climbset.yaml
+++ b/config/Magneto/MOTIONS/climbset.yaml
@@ -1,4 +1,4 @@
-num_motion: 4 #4
+num_motion: 5 #4
 type_motion: 0 # 0:climbing, 1:walking, 2:balancing
 
 # foot : AL-0, AR-1, BL-2, BR-3
@@ -9,18 +9,18 @@ motion0:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  duration: 0.35
+  durations: [0.25, 0.05, 0.25, 0.1]
   frame: 0
   # for only simulation
   mu: 0.3 # friction
-  fm: 40 # adhesive force
+  fm: 30 # adhesive force
 
 motion1:
   foot: 2
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  duration: 0.35
+  durations: [0.25, 0.05, 0.25, 0.1]
   frame: 0
   # for only simulation
   mu: 0.5 # friction
@@ -31,7 +31,7 @@ motion2:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  duration: 0.35
+  durations: [0.25, 0.05, 0.25, 0.1]
   frame: 0
   # for only simulation
   mu: 0.5 # friction
@@ -42,8 +42,19 @@ motion3:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  duration: 0.35
+  durations: [0.25, 0.05, 0.25, 0.1]
   frame: 0
   # for only simulation
   mu: 0.5 # friction
   fm: 70 # adhesive force
+
+motion4:
+  foot: 1
+  pos: [-0.1,0,0]
+  ori: [1,0,0,0]
+  swing_height: 0.05
+  durations: [0.25, 0.05, 0.25, 0.1]
+  frame: 0
+  # for only simulation
+  mu: 0.3 # friction
+  fm: 30 # adhesive force
