--- a/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
+++ b/config/Magneto/ARCHITECTURE/CLIMBING_PARAMS.yaml
@@ -19,13 +19,14 @@ slip_observer_params:
 
 contact_params:
     # AL,AR,BL,BR
-    friction: [0.5, 0.3, 0.5, 0.5]  
-    # friction: [0.5, 0.5, 0.5, 0.5]    
+    # friction: [0.5, 0.3, 0.5, 0.5]  
+    friction: [0.5, 0.5, 0.5, 0.5]    
     # friction: [0.7, 0.7, 0.7, 0.7]
 
 magnetism_params:
     # AL,AR,BL,BR
-    magnetic_force: [70., 30., 70., 70.] #[N]    
+    # magnetic_force: [70., 30., 70., 70.] #[N] 
+    magnetic_force: [70., 70., 70., 70.] #[N]   
     # magnetic_force: [60., 60., 60., 60.] #[N]    
     # magnetic_force: [75., 75., 75., 75.] #[N]
     # magnetic_force: [80., 80., 80., 80.] #[N]    
