--- a/config/Magneto/MOTIONS/climbset.yaml
+++ b/config/Magneto/MOTIONS/climbset.yaml
@@ -1,4 +1,4 @@
-num_motion: 5 #4
+num_motion: 4 #4
 type_motion: 0 # 0:climbing, 1:walking, 2:balancing
 
 # foot : AL-0, AR-1, BL-2, BR-3
@@ -9,18 +9,29 @@ motion0:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  durations: [0.25, 0.05, 0.25, 0.1]
+  durations: [0.25, 0.05, 0.25, 0.15]
   frame: 0
   # for only simulation
-  mu: 0.3 # friction
-  fm: 30 # adhesive force
+  mu: 0.3 # 0.3 # friction
+  fm: 20 # 30 # adhesive force
+
+# motion0:
+#   foot: 1
+#   pos: [-0.1,0,0]
+#   ori: [1,0,0,0]
+#   swing_height: 0.05
+#   durations: [0.25, 0.05, 0.25, 0.1]
+#   frame: 0
+#   # for only simulation
+#   mu: 0.5 # 0.3 # friction
+#   fm: 70 # 30 # adhesive force
 
 motion1:
   foot: 2
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  durations: [0.25, 0.05, 0.25, 0.1]
+  durations: [0.25, 0.05, 0.25, 0.15]
   frame: 0
   # for only simulation
   mu: 0.5 # friction
@@ -31,7 +42,7 @@ motion2:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  durations: [0.25, 0.05, 0.25, 0.1]
+  durations: [0.25, 0.05, 0.25, 0.15]
   frame: 0
   # for only simulation
   mu: 0.5 # friction
@@ -42,7 +53,7 @@ motion3:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  durations: [0.25, 0.05, 0.25, 0.1]
+  durations: [0.25, 0.05, 0.25, 0.15]
   frame: 0
   # for only simulation
   mu: 0.5 # friction
@@ -53,8 +64,8 @@ motion4:
   pos: [-0.1,0,0]
   ori: [1,0,0,0]
   swing_height: 0.05
-  durations: [0.25, 0.05, 0.25, 0.1]
+  durations: [0.25, 0.05, 0.25, 0.15]
   frame: 0
   # for only simulation
-  mu: 0.3 # friction
-  fm: 30 # adhesive force
+  mu: 0.5 # friction
+  fm: 70 # adhesive force
