--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -40,6 +40,12 @@ contact_surface_noraml:
   BL: [ 0.8414710, 0.0, 0.5403023 ] 
   BR: [ 0.8414710, 0.0, 0.5403023 ]
 motion_script: config/Magneto/MOTIONS/climbset.yaml
+contact_params:
+  friction: [0.5, 0.5, 0.5, 0.5] 
+magnetism_params:
+  # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
+  magnetic_force: [70., 30., 70., 70.] #[N]
+  residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
 
 # ground: robot_description/Ground/safe_climbing_test_2022/hexa_column.urdf
 # initial_pose: [ 0.00, 0.0, 0.5, 0.0, 1.5, 0.0 ] # x,y,z, rx,ry,rz
@@ -51,6 +57,12 @@ motion_script: config/Magneto/MOTIONS/climbset.yaml
 #   BL: [ 0.8660254, 0.5, 0.0 ] 
 #   BR: [ 0.8660254, -0.5, 0.0 ] 
 # motion_script: config/Magneto/MOTIONS/climbset_normal.yaml
+# contact_params:
+#   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
+#   friction: [0.7, 0.7, 0.7, 0.7] 
+# magnetism_params:
+#   magnetic_force: [75., 75., 75., 75.] #[N]
+#   residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
 
 
 # --motion script settings
@@ -66,16 +78,3 @@ control_configuration:
   kd: 3 #3 #3 #3 #15
   torque_limit: 5 #4.5
 
-# -- initial physics settings / can be changed based on motion script
-contact_params:
-  # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  friction: [0.5, 0.5, 0.5, 0.5] 
-  # friction: [0.7, 0.7, 0.7, 0.7] 
-  
-magnetism_params:
-  # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  # magnetic_force: [75., 75., 75., 75.] #[N]
-  magnetic_force: [70., 30., 70., 70.] #[N]
-  # magnetic_force: [150., 150., 150., 150.] #[N]  
-  # residual_magnetism: [5.0, 5.0, 5.0, 5.0] #5.0 # 3.0 #[%]
-  residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
