--- a/config/Magneto/SIMULATION.yaml
+++ b/config/Magneto/SIMULATION.yaml
@@ -10,11 +10,6 @@ plot_result: true # true
 # robot: robot_description/Robot/Magneto/MagnetoSim_Dart.urdf
 robot: robot_description/Robot/Magneto/MagnetoSim_limitup.urdf
 
-# ground: robot_description/Ground/safe_climbing_test_2022/slope.urdf
-# contact_frame: 0 # 0:foot local frame, 1:surface frame
-# initial_pose: [ 0.0, 0.0, 0.115, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
-# initial_leg_config: [0.0, 0.15707963267, -1.72787595947, 0.0, 0.0, 0.0]
-
 # ground: robot_description/Ground/safe_climbing_test_2022/ground_3d.urdf
 # magnetic_frame: 0 # 0:foot local frame, 1:surface frame
 # initial_pose: [ 0.0, 0.0, 0.0, 0.0, 1.57079632679, 0.0 ] # x,y,z, rx,ry,rz
@@ -30,22 +25,22 @@ robot: robot_description/Robot/Magneto/MagnetoSim_limitup.urdf
 #   BL: [ 0.5, 0.7071066, 0.500000 ] 
 #   BR: [ 0.5, -0.7071066, 0.500000 ]
 
-ground: robot_description/Ground/safe_climbing_test_2022/slope.urdf
-initial_pose: [ -0.3, 0.0, 0.55, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
-initial_leg_config: [0.0, -0.15707963267, -1.5707963268, 0.0, 0.0, 0.0]
-contact_frame: 2 # 0:foot local frame, 1:surface frame
-contact_surface_noraml:
-  AL: [ 0.8414710, 0.0, 0.5403023 ]
-  AR: [ 0.8414710, 0.0, 0.5403023 ]
-  BL: [ 0.8414710, 0.0, 0.5403023 ] 
-  BR: [ 0.8414710, 0.0, 0.5403023 ]
-motion_script: config/Magneto/MOTIONS/climbset.yaml
-contact_params:
-  friction: [0.5, 0.5, 0.5, 0.5] 
-magnetism_params:
-  # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
-  magnetic_force: [70., 30., 70., 70.] #[N]
-  residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
+# ground: robot_description/Ground/safe_climbing_test_2022/slope.urdf
+# initial_pose: [ -0.3, 0.0, 0.55, 0.0, 1.0, 0.0 ] # x,y,z, rx,ry,rz
+# initial_leg_config: [0.0, -0.15707963267, -1.5707963268, 0.0, 0.0, 0.0]
+# contact_frame: 2 # 0:foot local frame, 1:surface frame
+# contact_surface_noraml:
+#   AL: [ 0.8414710, 0.0, 0.5403023 ]
+#   AR: [ 0.8414710, 0.0, 0.5403023 ]
+#   BL: [ 0.8414710, 0.0, 0.5403023 ] 
+#   BR: [ 0.8414710, 0.0, 0.5403023 ]
+# motion_script: config/Magneto/MOTIONS/climbset.yaml
+# contact_params:
+#   friction: [0.5, 0.5, 0.5, 0.5] 
+# magnetism_params:
+#   # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
+#   magnetic_force: [70., 30., 70., 70.] #[N]
+#   residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
 
 # ground: robot_description/Ground/safe_climbing_test_2022/hexa_column.urdf
 # initial_pose: [ 0.00, 0.0, 0.5, 0.0, 1.5, 0.0 ] # x,y,z, rx,ry,rz
@@ -64,6 +59,26 @@ magnetism_params:
 #   magnetic_force: [75., 75., 75., 75.] #[N]
 #   residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
 
+ground: robot_description/Ground/safe_climbing_test_2022/slope_reversed.urdf
+initial_pose: [ 0.0, 0.0, 0.52, 0.0, 4.141592, 0.0 ] # x,y,z, rx,ry,rz
+initial_leg_config: [0.0, -0.3, -1.2707963268, 0.0, 0.0, 0.0]
+contact_frame: 2 # 0:foot local frame, 1:surface frame
+contact_surface_noraml:
+  AL: [ -0.8414710, 0.0, -0.5403023 ]
+  AR: [ -0.8414710, 0.0, -0.5403023 ]
+  BL: [ -0.8414710, 0.0, -0.5403023 ] 
+  BR: [ -0.8414710, 0.0, -0.5403023 ]
+motion_script: config/Magneto/MOTIONS/climbset_strong.yaml
+contact_params:
+  friction: [0.7, 0.7, 0.7, 0.7] 
+  # friction: [0.5, 0.5, 0.5, 0.5] 
+  # friction: [0.3, 0.3, 0.3, 0.3] 
+magnetism_params:
+  # [AL, AR, BL, BR] >> MagnetoFoot @ magneto_definition.hpp
+  # magnetic_force: [75., 75., 75., 75.] #[N]
+  # magnetic_force: [70., 70., 70., 70.] #[N]
+  magnetic_force: [100., 100., 100., 100.] #[N]
+  residual_magnetism: [0.0, 0.0, 0.0, 0.0] #5.0 # 3.0 #[%]
 
 # --motion script settings
 #motion_script: Config/CSIRO/MOTIONS/balanceset.yaml
